<?xml version="1.0"?>
<package format="1">
  <name>bz2_transport</name>
  <version>2.0.0</version>
  <maintainer email="qiyang.lyu@ntu.edu.sg">Qiyang Lyu</maintainer>
  <description>bz2_transport</description>
  <author>Cedric Pradalier</author>
  <license>BSD</license>
  <!-- <review status="unreviewed" notes=""/> -->
  <url>http://ros.org/wiki/bz2_transport</url>
  <!-- <depend package="std_msgs"/> for testing -->
  <!-- <depend package="message_transport_common"/> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>message_transport</build_depend>
  <!-- <build_depend>templated_transports</build_depend> -->
  <build_depend>bzip2</build_depend>
  <!-- <build_depend>rosbag</build_depend> -->
  <!-- <build_depend>pcl_ros</build_depend> -->


  <run_depend>roscpp</run_depend> 
  <run_depend>rospy</run_depend> 
  <run_depend>std_msgs</run_depend> 
  <run_depend>sensor_msgs</run_depend> 
  <run_depend>message_runtime</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>message_transport</run_depend>
  <!-- <run_depend>templated_transports</run_depend> -->
  <run_depend>bzip2</run_depend>

  <!-- <export>
    <cpp lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib -lbz2_transport -lbz2" cflags="-I${prefix}/include"/>
    <bz2_transport plugin="${prefix}/bz2_plugins.xml"/>
  </export> -->

  <!-- <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>rosbag</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rosbag</exec_depend>
  <exec_depend>pcl_ros</exec_depend>

  <depend>sensor_msgs</depend>
  <depend>git</depend>
  <depend>apr</depend> -->


  <!-- <rosdep name="bzip2"/> -->

</package>


