<package>
  <name>cm_transport</name>
  <version>0.3.6</version>
  <description>A bz2 compress trasnport</description>

  <maintainer email="qiyang.lyu@ntu.edu.sg">Qiyang Lyu</maintainer>
  <!-- <maintainer email="ros-orphaned-packages@googlegroups.com">ROS Orphaned Package Maintainers</maintainer> -->
  <author email="qiyang.lyu@ntu.edu.sg">Qiyang Lyu</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>image_transport</build_depend> 
  <build_depend>roscpp</build_depend> 
  <build_depend>std_msgs</build_depend> 
  <build_depend>std_srvs</build_depend> 
  <build_depend>sensor_msgs</build_depend> 
  <build_depend>message_filters</build_depend> 
  <build_depend>message_generation</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>message_transport</build_depend>
  <build_depend>templated_transports</build_depend>

  <run_depend>image_transport</run_depend> 
  <run_depend>roscpp</run_depend> 
  <run_depend>std_msgs</run_depend> 
  <run_depend>std_srvs</run_depend> 
  <run_depend>sensor_msgs</run_depend> 
  <run_depend>message_runtime</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>message_transport</run_depend>
  <run_depend>templated_transports</run_depend>

  <export>
    <cpp lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib -lcm_transport" cflags="-I${prefix}/include"/>
    <cm_transport plugin="${prefix}/default_plugins.xml" />
  </export>

</package>
