<package format="1">
  <name>message_transport</name>
  <version>2.0.0</version>
  <maintainer email="qiyang.lyu@ntu.edu.sg">Qiyang Lyu</maintainer>
  <author>Cedric Pradalier</author>
  <license>BSD</license>
  <description>
	  message_transport is a generic architecture for writing object transport,
	  similar to the message_transport architecture. 
  </description>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <!-- <build_depend>message_generation</build_depend> -->
  <build_depend>message_filters</build_depend>
  <build_depend>pluginlib</build_depend>
  <!-- <build_depend>rosbag</build_depend> -->
  <!-- <build_depend>pcl_ros</build_depend> -->


  <run_depend>roscpp</run_depend> 
  <run_depend>rospy</run_depend> 
  <!-- <run_depend>std_msgs</run_depend>  -->
  <!-- <run_depend>sensor_msgs</run_depend>  -->
  <!-- <run_depend>message_runtime</run_depend> -->
  <run_depend>message_filters</run_depend>
  <run_depend>pluginlib</run_depend>

  <export>
    <cpp lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib -lmessage_transport" cflags="-I${prefix}/include"/>
  </export>


</package>
